# resume

./: .gitignore  .pre-commit-config.yaml  .releaserc.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  package.json  requirements.txt
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  release.yml
data/: resume.yaml
scripts/: build_resume.py  helpers.py
templates/: resume.tex.j2
